@startuml
skinParam classAttributeIconSize 0

class Game{
{static} -gameInstance: Game
{static} +getGameInstance(): Game
+assignCharacter(Character c): void
+getGameStats(): void

}

Game *-- Characters.Character

abstract class Characters.Character{
    #name: String
    #characterType: String

    +setName(String s) : void
    +getName() : String
    +setSubscriptionType(String s) : void
    +getSubscriptionType() : Subscription
    +getDetails() : String
    {abstract} +getScore() : int
}


abstract class Skills.SkillsDecorator{
    +skillDescription: String
    +score: int

    +{abstract} getScore(): int
    +{abstract} getDetails(): String
    #isPremium(): Boolean
    #isExclusive(): Boolean
}

class Skills.PremiumSkills{
    + getScore(): int
    +getDetails(): String
}

class Skills.FreeSkills{
    + getScore(): int
    +getDetails(): String
}

class Skills.ExclusiveSkills{
    + getScore(): int
    +getDetails(): String
}

Characters.Character <|-- Skills.SkillsDecorator
Skills.SkillsDecorator ---> Characters.Character

class Characters.Human{
    + getScore() : int
}

class Characters.Robot{
    + getDetails(): void
    + getScore() : int
}

class Characters.Animal{
    + getDetails(): void
    + getScore() : int
}

enum Subscription{
FREE
PREMIUM
EXCLUSIVE
}

Characters.Character *-- Subscription


Characters.Character <|-- Characters.Human
Characters.Character <|-- Characters.Robot
Characters.Character <|-- Characters.Animal

Skills.SkillsDecorator <|-- Skills.PremiumSkills
Skills.SkillsDecorator <|-- Skills.ExclusiveSkills
Skills.SkillsDecorator <|-- Skills.FreeSkills

Skills.ExclusiveSkills <|-- Skills.Teleportation
Skills.FreeSkills <|-- Skills.TimeTravel
Skills.PremiumSkills <|-- Skills.Invisibility



@enduml